<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/red"
    >

    <TextView
        style="@style/textview"
        android:id="@+id/t1"
        android:text="@string/welcome"
        android:textSize="50sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@id/guideline2" />
    <TextView
      style="@style/textview"
        android:textSize="500sp"
        app:layout_constraintTop_toBottomOf="@id/t1"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_margin="@dimen/dp_20"
        android:text="@string/masai1"
        >

    </TextView>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/masailogo"
            app:layout_constraintTop_toTopOf="@id/guideline3"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="@dimen/dp_94">

        </ImageView>

    <Button
      style="@style/button"
        android:id="@+id/b1"
        android:text="@string/create"
        android:textColor="@color/white"
        android:textAllCaps="false"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:background="@color/black">
    </Button>
        <Button
            android:id="@+id/b2"
            android:text="@string/signin"
            android:background="@color/white"
            android:textAllCaps="false"
            style="@style/button"
            app:layout_constraintBottom_toBottomOf="@id/b1"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginBottom="@dimen/dp_50">




    </Button>


    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="@dimen/dp_94" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="292dp" />

</androidx.constraintlayout.widget.ConstraintLayout>